# todo-api-errors

./: .gitignore  Makefile  README.md  architecture.mermaid  buf.gen.doc.yaml  buf.gen.yaml  buf.yaml  client.go  go.mod  go.sum  main.go
api/proto/errors/v1/: errors.pb.go  errors.proto
api/proto/pii/v1/: account_without_annotations.pb.go  account_without_annotations.proto  account_without_annotations_grpc.pb.go  sensitivity.pb.go  sensitivity.proto
api/proto/todo/v1/: todo.pb.go  todo.pb.gw.go  todo.proto  todo_grpc.pb.go
check-api-break-automation/: .env.example  .gitignore  QUICK_START.md  README.md  TESTING_GUIDE.md  api_compatibility_checker.py  buf_integration.py  mcp_proto_server.py  proto_modifier.py  pyproject.toml  quick_test.sh  requirements-minimal.txt  requirements.txt  run_examples.sh  setup.py  setup_and_test.sh  setup_gcp_vm.sh  test_compatibility.py  test_simple.py
check-pii-automation/: QUICK_START.md  README.md  TESTING_GUIDE.md  cleanup_temp_files.sh  pii_detector.py  proto_tools.py  requirements.txt  setup_gcp_vm.sh  test_pii_detection.py  test_tooling.sh
check-pii-automation/reference/: PII_CLASSIFICATION_RULES.md
check-pii-automation/reference/proto/: account_with_pii_annotations.proto
docs/: api.md  langgraph.mermaid  llm.mermaid  pii.mermaid
internal/middleware/: error_handler.go  http_errors.go
internal/monitoring/: monitoring.go
internal/repository/: todo_repository.go
internal/service/: account_service.go  todo_service.go
internal/validation/: validation.go
openapi/api/proto/errors/v1/: errors.swagger.json
openapi/api/proto/pii/v1/: account_without_annotations.swagger.json  sensitivity.swagger.json
openapi/api/proto/todo/v1/: todo.swagger.json
